testdata/while/error.lox
while a do a = a - 1;   // error: line 1 at 'a': expecting '(' after 'while'
while (a do a = a - 1;  // error: line 2 at 'do': expecting ')' after condition
while (a) do a = a - 1; // error: line 3 at 'a': expecting ';' after expression
